# aplin

./: .gitignore  Cargo.toml  LICENSE  README.md  exampleconfig  flake.nix
nix/: hm-module.nix  module.nix  package.nix  shell.nix
src/: main.rs  shared_vars.rs
src/common/: ab.rs  ab_battery.rs  ab_device.rs  ab_state.rs  commands.rs  config.rs  mod.rs  shared_vars.rs
src/data/: config.rs  mod.rs  shared_vars.rs
src/linux/: tray.rs
