[[bin]]
name = "aplin"

[package]
name = "aplin"
version = "0.0.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = [ "bluetoothd", "l2cap" ] }
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11"
futures = "0.3"
once_cell = "1.20"
ksni = "0.3.1"
resvg = "0.44"
notify-rust = "4.11.3"