[[bin]]
name = "aplin"

[package]
name = "aplin"
version = "0.0.1"
edition = "2021"

[dependencies]
bluer = { version = "0.17.4", features = [ "bluetoothd", "l2cap" ] }
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11"
futures = "0.3"
once_cell = "1.21"
ksni = "0.3.1"
resvg = "0.45"
notify-rust = "4.11.7"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }